syntax = "proto3";

message User {
    string id = 1;
    string email = 2;
    string name = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string error = 2;
}

message RegisterRequest {
    string email = 1;
    string name = 2;
    string password = 3;
}

message RegisterResponse {
    string token = 1;
    User user = 2;
    string error = 3;
}

message AuthenticationRequest {
    string token = 1;
}

message AuthenticationResponse {
    User user = 1;
    string error = 2;
}

service UserService {
    rpc authenticate(AuthenticationRequest) returns (AuthenticationResponse);
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc login(LoginRequest) returns (LoginResponse);
}